formulario de registro con primeras validaciones , primeros endpoint de controladores

--- a/client/src/scss/variables.scss
+++ b/client/src/scss/variables.scss
@@ -43,7 +43,7 @@ $background-dark-light-web:#1a2734;
 
 
 //eventos
-$sucess : #84b84c;
+$success : #38e629;
 $error : #f00 ; 
 
 //colores para redes sociales 
